@@ -367,16 +367,6 @@
         of how many entries there are in the cache.  By default this is set to
         30000 (30 seconds).
       </dd>
-      <dt><code>external_ids:ovn-set-local-ip</code></dt>
-      <dd>
-        The boolean flag indicates if <code>ovn-controller</code> when create
-        tunnel ports should set <code>local_ip</code> parameter.  Can be
-        heplful to pin source outer IP for the tunnel when multiple interfaces
-        are used on the host for overlay traffic. This is also useful when
-        running multiple <code>ovn-controller</code> instances on the same
-        chassis, in which case this setting will guarantee that their tunnel
-        ports have unique configuration and can exist in parallel.
-      </dd>
       <dt><code>external_ids:garp-max-timeout-sec</code></dt>
       <dd>
         When used, this configuration value specifies the maximum timeout
@@ -410,9 +400,7 @@
         names on the same host using the same <code>vswitchd</code> instance.
         This may be useful when running a hybrid setup with more than one CMS
         managing ports on the host, or to use different datapath types on the
-        same host. Make sure you also set
-        <code>external_ids:ovn-set-local-ip</code> when using such
-        configuration. Also note that this ability is highly experimental and
+        same host. Also note that this ability is highly experimental and
         has known limitations (for example, stateful ACLs are not supported).
         Use at your own risk.
     </p>
